fixed footer text-align: center

--- a/own/layouts/findYourJob/styles/css/style.css
+++ b/own/layouts/findYourJob/styles/css/style.css
@@ -539,6 +539,7 @@ a:focus-visible {
   .footer__row {
     flex-grow: 0;
     flex-direction: column;
+    text-align: center;
     justify-content: flex-start;
   }
 }
