--- a/own/layouts/findYourJob/styles/scss/_footer.scss
+++ b/own/layouts/findYourJob/styles/scss/_footer.scss
@@ -68,7 +68,7 @@
         &__row {
             flex-grow: 0;
             flex-direction: column;
-            // align-content: center;
+            text-align: center;
             justify-content: flex-start;
         }
     }
